This file must be useful, no?

--- a/project.cabal
+++ b/project.cabal
@@ -41,6 +41,8 @@ executable project-exe
       Chapter11
       Chapter12
       Chapter13
+      Chapter14
+      Chapter15
       Chapter8
       Chapter9
       FirstProg
