--- a/project.cabal
+++ b/project.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -46,6 +46,7 @@ executable project-exe
       Chapter8
       Chapter9
       FirstProg
+      ListComprehension
       OurTest
       Planner
       Paths_project
